3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for CVS:

server/rune.c: Cleanup spring_trap() and clean some questionable logic.
server/attack.c: Cause spell traps to be triggered when containers with traps
   are destroyed by a spell effect.
Alex Schultz 2006-09-25

server/plugins.c: Change cfapi_object_say() to use either command_say() or
   npc_say() depending on if the object is a player. Fixes bug #1534889.
server/monster.c, include/sproto: Move code for NPCs to talk from the code that
   handles NPC replies into npc_say().
server/spell_effect.c: Implement proposed alchemy changes from the mailing list.
   Make value of nuggets given range from 5% to 40%. Depends on archetype
   changes to the alchemy spell and nuggets. (Without archetype changes will
   give obscenely low value.)
server/spell_util.c, include/sproto.h: Make min_casting_level() non-static.
Alex Schultz 2006-09-16

server/alchemy.c: Make shadow alchemy and random alchemy failures ignore the
   'cauldron' type being used. Fixes bug #1551385.
Alex Schultz 2006-09-15

lib/README: Large update to the ancient readme file describing the files in lib.
Alex Schultz 2006-09-12

common/treasure.c, include/treasure.h: Add MAX_SPELLITEM_LEVEL set to 110.
include/living.h: Set MAXLEVEL to 115.
doc/settings: Document create_home_portals outside of comments in lib/settings.
server/player.c: Comment cleanup. No code changes.
server/apply.c: Add check to auto-dropping of applied transports to not
   drop in shops.
common/treasure.c: Make fix_flesh_item only run when the donor is a
   monster. Fixes bug #1555569.
Alex Schultz 2006-09-10

server/apply.c, server/c_object.c, server/player.c: Use is_in_shop() to