@@ -17,6 +17,11 @@ else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 Changes for CVS:
 
+server/monster.c: Revert message formatting of NPC responses back to the
+   two-line format. Fix a possible buffer overflow when players talk to
+   certain NPCs.
+Andreas Kirschbaum 2006-10-02
+
 server/rune.c: Cleanup spring_trap() and clean some questionable logic.
 server/attack.c: Cause spell traps to be triggered when containers with traps
    are destroyed by a spell effect.
